# Game-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
Engine/: CMakeLists.txt
Engine/include/: Engine.h
Engine/include/Core/: Application.h  Base.h  EntryPoint.h  Layer.h  LayerStack.h  Log.h  Window.h
Engine/include/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/include/ImGui/: ImGuiLayer.h
Engine/include/Inputs/: Input.h  KeyCodes.h  MouseButtonCodes.h
Engine/include/Layers/: ImGuiLayer.h  Layer.h  LayerStack.h
Engine/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Engine/src/Core/: Application.cpp  Layer.cpp  LayerStack.cpp  Log.cpp
Engine/src/ImGui/: ImGuiLayer.cpp
Engine/src/Layers/: ImGuiBuild.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
scripts/cmake/: BuildMakefile.sh  BuildSolution.bat  CleanMakefile.sh  CleanSolution.bat  GenerateMakefile.sh  GenerateSolution.bat  RebuildMakfile.sh  RebuildSolution.bat
scripts/premake/: BuildMakefile.sh  BuildSolution.bat  CleanMakefile.sh  CleanSolution.bat  GenerateMakefile.sh  GenerateSolution.bat
